Bug 1114686 - remove unneeded include of nsJSEnvironment.h from nsMsgCompose.cpp. r=jorgk